--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,6 @@
 language: go
-
-go:
-  - 1.x
-
-before_install:
-  curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.27.0
+go: 
+ - 1.x
 
 script:
-  - make lint test
+ - go test -v ./...
