--- a/heroku.travis.yml
+++ b/heroku.travis.yml
@@ -22,3 +22,5 @@ script:
   - docker images
   - docker run -it jaykhare/jaydockerrepo:travisimage
   - docker push jaykhare/jaydockerrepo:travisimage
+  - docker tag jaykhare/jaydockerrepo:travisimage registry.heroku.com/$HEROKU_APP_NAME/jaydockertoherokuimage
+  - docker push registry.heroku.com/$HEROKU_APP_NAME/jaydockertoherokuimage
