--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ before_install:
 script:
   - go test -v ./...
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-  - echo "$ HEROKU_PASSWORD" | heroku login -u "$ HEROKU_USERNAME" --password-stdin registry.heroku.com
+  - echo "$ HEROKU_PASSWORD" | docker login -u "$ HEROKU_USERNAME" --password-stdin registry.heroku.com
   - echo "login successful if u see docker images below this..."
   - docker images
   - docker build -t jaykhare/jaydockerrepo:travisimage .
