--- a/.travis.yml
+++ b/.travis.yml
@@ -28,5 +28,5 @@ script:
 deploy:
     provider: script
     script:
-        heroku container:release web
+        heroku container:release web --app $HEROKU_APP_NAME
     branch: master
