--- a/.travis.yml
+++ b/.travis.yml
@@ -24,9 +24,12 @@ script:
   - docker push jaykhare/jaydockerrepo:travisimage
   - docker tag jaykhare/jaydockerrepo:travisimage registry.heroku.com/$HEROKU_APP_NAME/jaydockertoherokuimage
   - docker push registry.heroku.com/$HEROKU_APP_NAME/jaydockertoherokuimage
+  - echo "heroku app is being pushed to registry"
+  - heroku local web
+  - echo "heroku app should have executed locally above and below its trying to deploy on heroku web"
   
 deploy:
     provider: script
     script:
-        heroku container:release web --app $HEROKU_APP_NAME
+        heroku container:release web --app go-travis-heroku
     branch: master
